# Morse_Blink_Project

./: CMakeLists.txt  README.md  blink.c  blink.h  delay.c  delay.h  download_milkvduo_wiringx.sh  instructions.md  main.c  milkv_duo.cmake  morse.c  morse.h  test.c
.github/workflows/: main.yml
build_duo/: CMakeCache.txt  Makefile  cmake_install.cmake  morse_blink_led
build_duo_test/: CMakeCache.txt  Makefile  cmake_install.cmake  test
build_host/: CMakeCache.txt  Makefile  cmake_install.cmake  test
